--- a/MvcMovie/appsettings.json
+++ b/MvcMovie/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MvcMovieContext": "Data Source=MvcMovieContext-dfe5a561-3143-4def-b2a1-0bcbb546abba.db"
+  }
 }
